Fixed author controls not showing on post page for the author

--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -1,3 +1,9 @@
-.img-class {
-    background-image: linear-gradient(180deg,transparent,rgba(0,0,0,.7));
+.pt-\[17\%\] {
+    padding-top: 17%;
+  }
+  .mt-\[-10\%\] {
+    margin-top: -10%;
+  }
+  .pt-\[56\.25\%\] {
+    padding-top: 56.25%;
   }
